@@ -1,4 +1,5 @@
 0.17
+ - Add MICHALS CPAN account.
  - Add YENYA CPAN account.
 
 0.16 2015-02-11T08:12:48+01:00
